# paisy2pdf

./: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: ci.yml  update_installer_link.yaml  update_installer_link.yml
releases/download/0.0.0/: update.json
releases/download/2.0.0/: update.json
releases/download/v1.0.0/: update.json
src/: App.jsx  Dropzone.jsx  Error.jsx  FileSelector.jsx  LoadingIndicator.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/hooks/: useSelection.js
src/utils/: fileOperations.js
