[package]
name = "paisy2pdf"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "updater", "path-all", "dialog-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
rust_paisy2pdf = {git = "https://github.com/Mehjung/paisy2pdf_lib_rs.git"}
serde_json = "1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
